--- a/.github/workflows/docker-pypi-conda.yml
+++ b/.github/workflows/docker-pypi-conda.yml
@@ -1,11 +1,8 @@
 name: Docker PyPi Conda Test Release CICD
-
 on:
   push:
     branches: [ "main" ]
-
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
@@ -13,41 +10,15 @@ jobs:
       uses: actions/checkout@v2
       with:
           persist-credentials: false
-    # conda tests every python isolated and ship package if it works in every python
-    - name: publish-to-conda
-      uses: MichaelsJP/conda-package-publish-action@v1.0.0
+    # conda build, test and ship
+    - name: Build and publish Conda packages to Anaconda.org
+      uses: MichaelsJP/conda-package-publish-action@v1.1.0
       with:
         subDir: 'conda'
         AnacondaToken: ${{ secrets.ANACONDA_TOKEN }}
         platforms: 'all'
         override: true
         dry_run: false
-    # - name: Conda deployment of package with Python ${{ matrix.python-version }}
-    #   strategy:
-    #     matrix:
-    #       python-version: [3.7, 3.8, 3.9, 3.10, 3.11, 3.12] # run tests on all supported python versions
-    #   steps:
-    #     - uses: actions/checkout@v2
-    #       with:
-    #         fetch-depth: 0
-    #     - name: Conda environment creation and activation
-    #       uses: conda-incubator/setup-miniconda@v2
-    #       with:
-    #         python-version: ${{ matrix.python-version }}
-    #         environment-file: environment.yml    # Path to the build conda environment
-    #         auto-update-conda: false
-    #         auto-activate-base: false
-    #         show-channel-urls: true
-    #     - name: Build and upload the conda packages
-    #       uses: uibcdf/action-build-and-upload-conda-packages@v1.1.0
-    #       with:
-    #         meta_yaml_dir: devtools/conda-build
-    #         python-version: ${{ matrix.python-version }}    # Values previously defined in `matrix`
-    #         platform_linux-64: true
-    #         platform_osx-64: true
-    #         platform_win-64: true
-    #         label: auto
-    #         token: ${{ secrets.ANACONDA_TOKEN }}
     # dockers build multi-arch setup
     -
       name: setup-qemu-multiarch-arm-amd
@@ -58,7 +29,7 @@ jobs:
     - name: pypi-make-package
       id: makepypipackage
       run: python3 setup.py sdist bdist_wheel
-    # dockerhub ship image
+    # dockerhub build, test and ship image
     -
       name: login-dockerhub-registry
       uses: docker/login-action@v2
@@ -67,17 +38,16 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     # docker arm/amd images build security test package
     -
-      name: build and test docker image
+      name: Build and Publish Docker Image to DockerHub
       uses: docker/build-push-action@v3
       with:
         context: .
         file: ./Dockerfile
-        # linux/arm64
         platforms: linux/amd64,linux/aarch64
         push: ${{ github.event_name != 'pull_request' }}
         tags: willy0912/kubify:main
-    # pypi ship package
-    - name: test and release pypa package
+    # pypi build, test and ship package
+    - name: Build and Publish to PyPi
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
         user: __token__
