--- a/services/datascience/example-tensorflow-gpu-cpu-svc/kubify.yml
+++ b/services/datascience/example-tensorflow-gpu-cpu-svc/kubify.yml
@@ -3,9 +3,6 @@ apiVersion: k8.kubify.local/v1
 kind: Config
 metadata:
   name: example-tensorflow-gpu-cpu-svc
-services:
-  example-tensorflow-cpu-svc:
-
 dev:
   sync:
     'cpu/***': 'app/'
@@ -29,7 +26,7 @@ profiles:
       metrics:
       - type: Resource
         resource:
-          name: cpu
+          name: gpu
           target:
             type: Utilization
             averageUtilization: 90
