--- a/services/internal-facing/example-flask-svc/kubify.yml
+++ b/services/internal-facing/example-flask-svc/kubify.yml
@@ -5,6 +5,8 @@ metadata:
   name: example-flask-svc
 init: |
   echo "run migrations for example-flask-svc/app"
+depends_on:
+  - kafka-svc
 dev:
   sync:
     'app/***': 'app/'
